image scroll test

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -62,3 +62,10 @@ markdown_extensions:
   - toc:
       permalink: True
   - attr_list
+  - md_in_html
+
+extra_css:
+  - styles/styles.css
+
+extra_javascript:
+  - scripts/script.js
